custom/kcuc.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kcuc-deployment
  labels:
    app: kcuc
spec:
  replicas: 3
  selector:
    matchLabels:
      app: kcuc
  template:
    metadata:
      labels:
        app: kcuc
    spec:
      containers:
      - name: kcuc
        image: leofigydroid/kcuc:latest
        ports:
        - containerPort: 90
        livenessProbe:
          httpGet:
            path: /health
            port: 90
            httpHeaders:
              - name: Custom-Header
                value: witcom
