custom/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kcuc
  annotations:
    ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
  - http:
      paths:
      - path: /witcom
        pathType: Prefix
        backend:
          service:
            name: kcuc
            port:
              number: 90
